<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="fill_parent" android:paddingLeft="5dip">
<ScrollView android:layout_height="wrap_content" android:layout_width="fill_parent">

<TableLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginRight="5dip" android:id="@+id/adapterroot">
	<EditText android:layout_height="wrap_content" android:id="@+id/fleet_name_edittext" android:layout_width="fill_parent" android:text="@string/fleet_name" android:selectAllOnFocus="true" android:maxLines="1" android:layout_marginTop="5dip" android:inputType="text" android:focusable="false"></EditText><ImageView android:layout_height="wrap_content" android:layout_below="@+id/fleet_name_edittext" android:layout_width="wrap_content" android:id="@+id/separator1" android:src="@drawable/separator" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="5dip" android:paddingTop="5dip" android:adjustViewBounds="true"></ImageView><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAligned="true">
	<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/label_travel_duration" style="@style/TextviewFleetStyle" android:paddingTop="10dip" android:text="@string/duration"></TextView><EditText android:layout_height="wrap_content" android:layout_below="@+id/separator1" android:layout_toRightOf="@+id/label_travel_duration" android:layout_alignParentRight="true" android:text="00:00:00" android:id="@+id/travel_duration_edittext" android:layout_width="fill_parent" android:gravity="right" android:inputType="datetime" android:layout_weight="1" android:focusable="false" android:clickable="true"></EditText></TableRow><ImageView android:layout_height="wrap_content" android:layout_below="@+id/fleet_name_edittext" android:layout_width="wrap_content" android:id="@+id/separator1" android:src="@drawable/separator" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="5dip" android:paddingTop="5dip" android:adjustViewBounds="true"></ImageView><TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
	<TextView android:layout_height="wrap_content" android:id="@+id/label_delta" android:paddingTop="10dip" android:layout_width="wrap_content" style="@style/TextviewFleetStyle" android:text="@string/delta"></TextView><EditText android:layout_height="wrap_content" android:id="@+id/delta_edittext" android:text="0" android:selectAllOnFocus="true" android:maxLines="1" android:gravity="right" android:layout_width="wrap_content" android:layout_weight="1" android:inputType="numberDecimal" android:maxLength="5" android:focusable="false"></EditText><TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="s" android:layout_weight="0"></TextView><RadioGroup android:layout_height="wrap_content" android:id="@+id/delta_radio_group" android:paddingRight="10dip" android:paddingLeft="10dip" android:layout_width="fill_parent">
	<RadioButton android:layout_height="wrap_content" android:id="@+id/delta_before" android:text="@string/before" android:checked="true" android:layout_width="fill_parent"></RadioButton><RadioButton android:layout_height="wrap_content" android:layout_below="@+id/separator2" android:layout_toRightOf="@+id/delta_edittext" android:id="@+id/delta_after" android:text="@string/after" android:layout_width="fill_parent"></RadioButton></RadioGroup>

</TableRow><ImageView android:layout_height="wrap_content" android:layout_below="@+id/fleet_name_edittext" android:layout_width="wrap_content" android:id="@+id/separator1" android:src="@drawable/separator" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="5dip" android:paddingTop="5dip" android:adjustViewBounds="true"></ImageView><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:paddingTop="10dip" android:layout_width="wrap_content" style="@style/TextviewFleetStyle" android:text="@string/alarm" android:id="@+id/label_alarm"></TextView><EditText android:layout_height="wrap_content" android:text="0" android:selectAllOnFocus="true" android:maxLines="1" android:gravity="right" android:layout_width="wrap_content" android:layout_weight="1" android:inputType="numberDecimal" android:id="@+id/alarm_edittext" android:focusable="false" android:maxLength="8"></EditText><TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="s" android:layout_weight="0"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/alarm_checkbox" android:layout_marginLeft="10dip"></CheckBox>


</TableRow><ImageView android:layout_height="wrap_content" android:layout_below="@+id/fleet_name_edittext" android:layout_width="wrap_content" android:id="@+id/separator1" android:src="@drawable/separator" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="5dip" android:paddingTop="5dip" android:adjustViewBounds="true" android:visibility="gone"></ImageView><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextviewFleetStyle" android:text="@string/launch_at" android:textStyle="bold"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextviewFleetStyle" android:text="05:01:01" android:layout_weight="1" android:gravity="right" android:textStyle="bold" android:id="@+id/launch_at_textview"></TextView>
</TableRow><ImageView android:layout_height="wrap_content" android:layout_below="@+id/fleet_name_edittext" android:layout_width="wrap_content" android:id="@+id/separator1" android:src="@drawable/separator" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="5dip" android:paddingTop="5dip" android:adjustViewBounds="true"></ImageView><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="2">

</TableRow></TableLayout>





</ScrollView><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:visibility="gone"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/cancel" android:id="@+id/cancel"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/ok" android:id="@+id/ok"></Button></LinearLayout>
</LinearLayout>